beacon-message link + product image padding fix on mobile

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -534,7 +534,8 @@ a.product__text {
 
 @media screen and (max-width: 749px) {
   .product__media-item--variant:first-child {
-    padding-right: 1.5rem;
+    /* CLUB - remove right padding on mobile when 'Hide other variants’ media after selecting a variant' option is switched on - makes it clearer there are additional images present
+    /* padding-right: 1.5rem; */
   }
 }
 
